Starting feed view

--- a/app/views/photos/feed.html.erb
+++ b/app/views/photos/feed.html.erb
@@ -27,10 +27,8 @@
 </div>
 
 
+<%= current_user.feed_photos.count %>
 
-<%= current_user.own_photos.count %>
-<% current_user.own_photos.each do |photo| %>
-
-  <%= render "photos/photo", photo: photo %>
-      
+<% current_user.liked_photos.each do |photo| %>
+  <%= render "photos/photo", photo: photo%>
 <% end %>
