--- a/app/views/photos/liked.html.erb
+++ b/app/views/photos/liked.html.erb
@@ -9,22 +9,26 @@
       <li class="nav-item">
         <%= link_to "Posts", user_path(@user.username), class: "nav-link" %>
       </li>
+
       <li class="nav-item">
         <%= link_to "Liked photos", liked_photos_path(@user.username), class: "nav-link" %>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Feed</a>
+        <%= link_to "Feed", feed_photos_path(@user.username), class: "nav-link" %>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Followers</a>
+        <%= link_to "Followers", followers_path(@user.username), class: "nav-link" %>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Following</a>
+        <%= link_to "Following", leaders_path(@user.username), class: "nav-link" %>
       </li>
     </ul>
   </div>
 </div>
+
 
 
 <%= current_user.liked_photos.count %>
